--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-24 px-5 flex">
+    <main class="container mx-auto mt-24 flex">
       <%= yield %>
     </main>
   </body>
