--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,4 +1,4 @@
-<div class="px-5">
+<div class="px-3">
   <h1 class="font-bold text-4xl text-blue-500 mb-3">Payments</h1>
   <%= link_to 'New Payment', new_payment_path, class: 'btn btn-outline-info' %>
 </div>
@@ -30,7 +30,7 @@
         </td>
         <td>
           <%- if payment.draft? %>
-            <%= link_to 'Request Approval', request_payment_payment_path(payment), method: :put, data: { confirm: "Request for approval?" } %>
+            <%= link_to 'Request for approval', request_payment_payment_path(payment), method: :put, data: { confirm: "Request for approval?" }, class: 'text-sm' %>
           <% end %>
         </td>
       </tr>
